--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 
     <title>S&aacute;dhana</title>
 
-    <%= stylesheet_link_tag 'delta/jquery-ui.css' %>
+    <%= stylesheet_link_tag 'ui-lightness/jquery-ui-1.8rc3.custom.css' %>
     <%= stylesheet_link_tag 'ui.selectmenu' %>
     <%= stylesheet_link_tag 'awesome' %>
     <%= stylesheet_link_tag 'application' %>
