--- a/public/stylesheets/awesome.css
+++ b/public/stylesheets/awesome.css
@@ -50,7 +50,7 @@
 }
 
 .blue.awesome, .blue.awesome:visited {
-  background-color: #2daebf;
+  background-color: #27ABFF;
 }
 
 .blue.awesome:hover {
