--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,35 +1,20 @@
-<div id="functionalities">
-<%= render :partial => 'shared/functionalities_slideshow' %>
-
-<div id="functionalities_list">
-  <h2><%= t('home.functionalities.list_title') %></h2>
-  <ul>
-    <li><%= t('home.functionalities.manage_your_practices') %></li>
-    <li><%= t('home.functionalities.angas') %></li>
-    <li><%= t('home.functionalities.techniques') %></li>
-    <li><%= t('home.functionalities.anywhere') %></li>
-    <li><%= t('home.functionalities.share') %></li>
-    <li><%= t('home.functionalities.practices_calendar') %></li>
-  </ul>
-</div>
-</div>
+<%= render :partial => 'shared/functionalities_dialog' %>
 
 <div id="get_started">
     <h2><%= t('home.get_started.title') %></h2>
     <p><%= t('home.get_started.text') %></p>
     <div id="sign_up_button">
       <%= link_to_function t('home.get_started.button'), "$('#sign_up_dialog').dialog('open');", :class => 'awesome large blue' %>
+      <%= link_to_function t('home.functionalities.button'), "$('#functionalities').dialog('open');", :class => 'awesome large blue' %>
     </div>
 </div>
 
 <div id="social">
-<div class="tweet"></div>
+  <span class="twitter">
+    <%= t('home.follow_us_on_twitter_html', :twitter => link_to(content_tag(:span,'Twitter'), 'http://twitter.com/sadhana_app', :class=>'twitter-link')) %>
+  </span>
 
-<div class="facebook">
-  <%= t('home.find_us_on_fb_html', :facebook => link_to(content_tag(:span, "facebook"), "http://www.facebook.com/pages/Sadhana/134874333191329", :class=>'facebook-link')) %></br>
-  <iframe style='margin-top: 15px; width: 450px;' src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FSadhana%2F134874333191329&amp;layout=standard&amp;show_faces=true&amp;width=450&amp;action=like&amp;colorscheme=light&amp;height=100" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:100px;" allowTransparency="true"></iframe>
+  <span class="facebook">
+    <%= t('home.find_us_on_fb_html', :facebook => link_to(content_tag(:span, "facebook"), "http://www.facebook.com/pages/Sadhana/134874333191329", :class=>'facebook-link')) %></br>
+  </span>
 </div>
-</div>
-<%= javascript_tag do %>
-  $('.tweet').tweet({username: 'sadhana_app', avatar_size: 32, count: 1, intro_text: '<%= t('home.follow_us_on_twitter_html', :twitter => link_to(content_tag(:span,'Twitter'), 'http://twitter.com/sadhana_app', :class=>'twitter-link')) %>', loading_text: 'Loading...'});
-<% end %>
