--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,5 @@
 /*
-*= require ui-lightness/jquery-ui-1.8rc3.custom
+*= require delta/jquery-ui
 *= require ui.selectmenu
 *= require awesome
 *= require app
