login using padma

--- a/app/views/shared/_oauth_providers.html.erb
+++ b/app/views/shared/_oauth_providers.html.erb
@@ -5,6 +5,6 @@
     <%= image_tag "facebook_64.png", :size => "64x64", :alt => "Facebook" %>Facebook</a>
   <a href="#" class="auth_provider" onclick="alert('<%= t('shared.oauth_providers.google_apps_not_available') %>')" >
     <%= image_tag "google_64.png", :size => "64x64", :alt => "Google" %>Google</a>
-  <a href="#" class="auth_provider" onclick="alert('<%= t('shared.oauth_providers.padma_not_available') %>')">
-    <%= image_tag "padma_64.png", :size => "64x64", :alt => "Padma" %>Padma</a>
+  <a href="auth/cas" class="auth_provider">
+    <%= image_tag "cas_64.png", :size => "64x64", :alt => "Padma" %>Padma</a>
 </div>
