--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -296,6 +296,22 @@ div[aria-labelledby = 'ui-dialog-title-edit_profile_dialog'] .ui-dialog-content,
     height: 18px;
 }
 
+#plans {
+    overflow: auto;
+}
+
+#plans .plan .select_button {
+    margin-top: 0.3em;
+}
+
+#plans .select_button input.ui-state-selected {
+    background: -moz-linear-gradient(center top , #058DFF 0%, #279CFF 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    border: 1px solid #0C6AA6;
+    box-shadow: 0 2px 2px rgba(12, 106, 106, 0.5) inset, 0 1px 2px rgba(0, 0, 0, 0.2) !important;
+    position: relative;
+    top: 1px;
+}
+
 #plans .plan {
   float: left;
   border: 1px solid black;
@@ -337,6 +353,7 @@ div[aria-labelledby = 'ui-dialog-title-edit_profile_dialog'] .ui-dialog-content,
 
 #plans .plan h2 {
   margin-top: 0.5em;
+  margin-bottom: 0.3em;
 }
 
 #plans .plan.recommended {
