--- a/app/views/shared/_subscription_tab.html.erb
+++ b/app/views/shared/_subscription_tab.html.erb
@@ -23,7 +23,7 @@
           <li class='unlimited'><%= t('shared.plans_dialog.calendar').html_safe %></li>
           <li class='limited'><%= t('shared.plans_dialog.share').html_safe %></li>
           <li class="price">US$ <span class="limited">3</span>/<%= t('datetime.prompts.month') %></li>
-          <li class="select_button"><%= submit_tag "Select", :plan_id => 2, :class => "#{'ui-state-selected' if f.object.plan_id == 2}" %></li>
+          <li class="select_button"><%= submit_tag "Select", :plan_id => 3, :class => "#{'ui-state-selected' if f.object.plan_id == 3}" %></li>
         </ul>
       </div>
       <div id='pro' class="plan">
@@ -41,16 +41,20 @@
 
     <%= f.hidden_field :stripe_card_token %>
 
-    <% unless f.object.stripe_customer_token.present? %>
-    <div class="field">
+    <% if f.object.stripe_customer_token.present? %>
+      <div class = "field cc">
+        Credit card already set
+      </div>
+    <% else %>
+    <div class="field cc">
       <%= label_tag :card_number, "Credit Card Number " %>
       <%= text_field_tag :card_number, nil, name: nil %>
     </div>
-    <div class="field">
+    <div class="field cc">
       <%= label_tag :card_code, "Security Code on Card (CVV)" %>
       <%= text_field_tag :card_code, nil, name: nil %>
     </div>
-    <div class="field">
+    <div class="field cc">
       <%= label_tag :card_month, "Card Expiration" %>
       <%= select_month nil, {add_month_numbers_true: true}, {name: nil, id: "card_month"}%>
       <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"}%>
@@ -74,7 +78,13 @@
         event.preventDefault();
         $('.select_button input').removeClass('ui-state-selected');
         $(this).addClass('ui-state-selected');
-        $('#subscription_plan').val($(this).attr('plan_id'));
+        var plan_id = $(this).attr('plan_id');
+        $('#subscription_plan').val(plan_id);
+        if(plan_id != 1) {
+            $('.field.cc').show();
+        } else {
+            $('.field.cc').hide();
+        }
     });
 
     Stripe.setPublishableKey($('meta[name="stripe-key"]').attr('content'));
