--- a/app/views/shared/_subscription_tab.html.erb
+++ b/app/views/shared/_subscription_tab.html.erb
@@ -48,16 +48,16 @@
     <% end %>
     <div class="field cc">
       <%= label_tag :card_number, "Credit Card Number " %>
-      <%= text_field_tag :card_number, nil, name: nil %>
+      <%= text_field_tag :card_number, nil, :name => nil %>
     </div>
     <div class="field cc">
       <%= label_tag :card_code, "Security Code on Card (CVV)" %>
-      <%= text_field_tag :card_code, nil, name: nil %>
+      <%= text_field_tag :card_code, nil, :name => nil %>
     </div>
     <div class="field cc">
       <%= label_tag :card_month, "Card Expiration" %>
-      <%= select_month nil, {add_month_numbers_true: true}, {name: nil, id: "card_month"}%>
-      <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"}%>
+      <%= select_month nil, {:add_month_numbers_true => true}, {:name => nil, :id => "card_month"}%>
+      <%= select_year nil, {:start_year => Date.today.year, :end_year => Date.today.year+15}, {:name => nil, :id => "card_year"}%>
     </div>
 
     <div id="stripe_error">
