--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -316,7 +316,7 @@ div[aria-labelledby = 'ui-dialog-title-edit_profile_dialog'] .ui-dialog-content,
   float: left;
   border: 1px solid black;
   width: 250px;
-  height: 200px;
+  height: 250px;
   margin-top: 20px;
   text-align: center;
   background: white;
@@ -356,10 +356,16 @@ div[aria-labelledby = 'ui-dialog-title-edit_profile_dialog'] .ui-dialog-content,
   margin-bottom: 0.3em;
 }
 
+#plans .plan .ui-button {
+    font-size: 0.9em;
+    height: 23px !important;
+    padding: 0;
+}
+
 #plans .plan.recommended {
   font-size: 150%;
   width: 270px;
-  height: 240px;
+  height: 320px;
   margin-top: 0;
   background: LightGoldenRodYellow;
   box-shadow: 10px 10px 5px #888;
