--- a/app/views/shared/_registration_tab.html.erb
+++ b/app/views/shared/_registration_tab.html.erb
@@ -3,6 +3,10 @@
   resource ||= current_user
 %>
 <%= form_for( resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :autocomplete => 'off' }) do |f| %>
+   <div class="field">
+    <%= f.label :name %><br/>
+    <%= f.text_field :name %>
+  </div>
   <div class="field">
     <%= f.label :email %><br/>
     <%= f.text_field :email, :type => 'email' %>
