--- a/app/views/shared/_sign_up_fields.html.erb
+++ b/app/views/shared/_sign_up_fields.html.erb
@@ -6,6 +6,10 @@
   </ul>
 <% end %>
 <div class='field'>
+  <%= f.label :name %><br/>
+  <%= f.text_field :name %>
+</div>
+<div class='field'>
   <%= f.label :email %><br/>
   <%= f.text_field :email, :type => 'email' %>
 </div>
